[package]
name = "rc5"
version = "0.1.0"
authors = ["Guido Giuntoli <gagiuntoli@gmail.com>", "Ben Marsh <ben.marsh@mintlayer.org>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["cryptography"]

[dependencies]
num = "0.4.0"

#[lib]
#name = "rc5"           # The name of the target.
#path = "src/lib.rs"    # The source file of the target.
#test = true            # Is tested by default.
#doctest = false         # Documentation examples are tested by default.
#bench = true           # Is benchmarked by default.
#doc = false             # Is documented by default.
#plugin = false         # Used as a compiler plugin (deprecated).
#proc-macro = false     # Set to `true` for a proc-macro library.
#harness = false         # Use libtest harness.
#edition = "2018"       # The edition of the target.
#crate-type = ["lib"]   # The crate types to generate.
#required-features = [] # Features required to build this target (N/A for lib).
