[package]
name = "rc5-cipher"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Guido Giuntoli <gagiuntoli@gmail.com>"]
description = "A generic use elliptic curve library"
documentation = "https://docs.rs/rc5-cipher"
homepage = "https://gagiuntoli.com/"
repository = "https://github.com/gagiuntoli/rc5"
keywords = ["cryptography", "cipher"]

[dependencies]
num = "0.4.0"
